syntax = "proto3";

option csharp_namespace = "XsollaSchoolBackend.Proto";

package purchase;

service Purchase {
  rpc SendEmail (RequestMsg) returns (ReplyMsg);
}

message RequestMsg {
  string email = 1;
  string orderNumber = 2;
  repeated Item items = 3;
}

message Item {
	string itemName = 1;
	double price = 2;
	int32 count = 3;
}

message ReplyMsg {
  int32 message = 1;
}